--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   "bugs": {
     "url": "https://github.com/attila/eemit/issues"
   },
-  "main": "dist/eemit.js",
+  "main": "src/eemit.js",
   "scripts": {
     "build:babel": "babel src/eemit.js --no-comments -s true -o dist/eemit.js",
     "build:uglify": "uglifyjs dist/eemit.js -m --source-map dist/eemit.min.js.map --in-source-map dist/eemit.js.map --screw-ie8 -o dist/eemit.min.js",
     "build": "npm run build:babel && npm run build:uglify",
     "pretest": "npm run build",
-    "test": "npm run test:lint && npm run test:unit",
+    "test": "npm run test:lint && npm run test:node && npm run test:browser",
     "test:lint": "eslint src test",
-    "test:unit": "mocha --compilers js:babel-register"
+    "test:browser": "karma start --single-run --no-auto-watch karma.config.js",
+    "test:node": "mocha --compilers js:babel-register"
   },
   "keywords": [
     "eemit",
@@ -27,15 +28,32 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.2",
     "babel-eslint": "^5.0.0",
+    "babel-istanbul-loader": "^0.1.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-es2015-modules-umd": "^6.6.5",
+    "babel-plugin-transform-es2015-object-super": "^6.6.5",
+    "babel-plugin-transform-proto-to-assign": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.3.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-mocha": "^2.0.0",
     "eslint-plugin-mocha-cleanup": "^1.6.0",
     "eslint-plugin-react": "^4.2.3",
     "estraverse-fb": "^1.3.1",
+    "karma": "^0.13.22",
+    "karma-babel-preprocessor": "^6.0.1",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-sauce-launcher": "^0.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
-    "uglify": "^0.1.5"
+    "object-assign": "^4.0.1",
+    "uglify": "^0.1.5",
+    "webpack": "^1.12.14"
   }
 }
