--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ addons:
     packages:
       - g++-4.8
 after_script:
-  - codeclimate-test-reporter < lcov.info
+  - codeclimate-test-reporter < ./coverage/lcov.info
